product-service/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: doc-ps-aks-ingress
spec:
  tls:
    - hosts:
        - doc-ps-aks-ingress.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: doc-ps-aks-ingress.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: doc-prod-srv
              servicePort: 8082
            path: /
